// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<h2
  className="css-41y8r1"
  data-test-id="ruids-heading"
>
  Heading
</h2>
`;

exports[`renders the component h3 1`] = `
<h3
  className="css-f4lcri"
  data-test-id="ruids-heading"
>
  Heading
</h3>
`;

exports[`renders the component with an additional class name 1`] = `
<h2
  className="my-extra-class css-41y8r1"
  data-test-id="ruids-heading"
>
  Heading
</h2>
`;
